Added nyan cat sprite, music, and centered canvas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket Patrol</title>
+    <link href="./assets/favicon (1).ico" rel="icon" type="image/x-icon">
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/Rocket.js"></script>
     <script src="./src/prefabs/Spaceship.js"></script>
@@ -12,7 +13,11 @@
     <script src = "./src/main.js"></script>
     <style>
         body {
-            background-color: beige;
+            background-color: #007bff;
+        }
+        canvas {
+            display : block;   
+            margin : auto;
         }
     </style>
 </head>
