--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Rocket Patrol</title>
     <link href="./assets/favicon (1).ico" rel="icon" type="image/x-icon">
     <script src="./lib/phaser.js"></script>
-    <script src="./src/prefabs/Rocket.js"></script>
-    <script src="./src/prefabs/Spaceship.js"></script>
+    <script src="./src/prefabs/nyanCat.js"></script>
+    <script src="./src/prefabs/nyanRainbow.js"></script>
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/main.js"></script>
     <style>
         body {
-            background-color: #007bff;
+            background-color: #0F4D8F;
         }
         canvas {
             display : block;   
