--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             display : block;   
             margin : auto;
         }
+        @font-face {
+            font-family: 'pixel';
+            src: url('/assets/pixel_font.ttf');
+        }
     </style>
 </head>
 <body>
