--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/main.js"></script>
+    <link rel="preload" as="pixel_custom" href="/assets/pixel_font.ttf" type="font/ttf" />
+    <div style="font-family: 'pixel_custom';">-</div>
     <style>
         body {
             background-color: #0F4D8F;
         }
+        @font-face {
+            font-family: 'pixel_custom';
+            src: url('/assets/pixel_font.ttf');
+        }
         canvas {
             display : block;   
             margin : auto;
-        }
-        @font-face {
-            font-family: 'pixel';
-            src: url('/assets/pixel_font.ttf');
+            font-family: 'pixel_custom';
         }
     </style>
+    
 </head>
 <body>
     
