--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Patrol</title>
+    <title>Nyan Patrol</title>
     <link href="./assets/favicon (1).ico" rel="icon" type="image/x-icon">
     <script src="./lib/phaser.js"></script>
     <script src="./src/prefabs/nyanCat.js"></script>
