--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/main.js"></script>
     <link rel="preload" as="pixel_custom" href="/assets/pixel_font.ttf" type="font/ttf" />
-    <div style="font-family: 'pixel_custom';">-</div>
+    <!-- <div style="font-family: 'pixel_custom';">-</div> -->
+    <div style="font-family:pixel_custom; position:absolute; left:-1000px; visibility:hidden;">.</div>
+
     <style>
         body {
             background-color: #0F4D8F;
