more font fuddling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src = "./src/scenes/Menu.js"></script>
     <script src = "./src/scenes/Play.js"></script>
     <script src = "./src/main.js"></script>
-    <link rel="preload" as="font" href='../assets/pixel_font.ttf' type="font/ttf" />
+    <link rel="preload" as="font" href='./assets/pixel_font.ttf' type="font/ttf" />
     <!-- <div style="font-family: 'pixel_custom';">-</div> -->
     <div style="font-family:pixel_custom; position:absolute; left:-1000px; visibility:hidden;">.</div>
 
@@ -21,7 +21,7 @@
         }
         @font-face {
             font-family: 'pixel_custom';
-            src: url('../assets/pixel_font.ttf');
+            src: url('./assets/pixel_font.ttf');
         }
         canvas {
             display : block;   
